// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletedFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`FullFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`NewFoo render 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-_name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-title"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;
